--- a/Resources/Prototypes/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Hydroponics/seeds.yml
@@ -7,6 +7,8 @@
   packetPrototype: WheatSeeds
   productPrototypes:
     - WheatBushel
+  mutationPrototypes:
+    - mheat
   lifespan: 25
   maturation: 6
   production: 3
@@ -21,6 +23,28 @@
       PotencyDivisor: 20
     Flour:
       Min: 5
+      Max: 20
+      PotencyDivisor: 20
+
+- type: seed
+  id: mheat
+  name: seeds-mheat-name
+  noun: seeds-noun-seeds
+  displayName: seeds-mheat-display-name
+  plantRsi: Objects/Specific/Hydroponics/mheat.rsi
+  packetPrototype: mheatSeeds
+  productPrototypes:
+    - FoodMeatWheat
+  lifespan: 25
+  maturation: 6
+  production: 3
+  yield: 3
+  potency: 5
+  idealLight: 8
+  nutrientConsumption: 0.40
+  chemicals:
+    Nutriment:
+      Min: 1
       Max: 20
       PotencyDivisor: 20
 
@@ -318,6 +342,29 @@
   idealHeat: 298
   chemicals:
     Sugar:
+      Min: 4
+      Max: 5
+      PotencyDivisor: 5
+
+- type: seed
+  id: saltcane
+  name: seeds-saltcane-name
+  noun: seeds-noun-seeds
+  displayName: seeds-saltcane-display-name
+  plantRsi: Objects/Specific/Hydroponics/saltcane.rsi
+  packetPrototype: saltcaneSeeds
+  productPrototypes:
+    - Saltcane
+  harvestRepeat: Repeat
+  lifespan: 60
+  maturation: 6
+  production: 6
+  yield: 3
+  potency: 10
+  growthStages: 3
+  idealHeat: 298
+  chemicals:
+    TableSalt:
       Min: 4
       Max: 5
       PotencyDivisor: 5
@@ -1399,6 +1446,8 @@
   packetPrototype: CottonSeeds
   productPrototypes:
     - CottonBol
+  mutationPrototypes:
+    - duracotton 
   lifespan: 25
   maturation: 8
   production: 3
@@ -1407,6 +1456,29 @@
   idealLight: 8
   growthStages: 3
   waterConsumption: 0.60
+  chemicals:
+    Fiber:
+      Min: 5
+      Max: 10
+      PotencyDivisor: 20
+
+- type: seed
+  id: duracotton
+  name: seeds-duracotton-name
+  noun: seeds-noun-seeds
+  displayName: seeds-duracotton-display-name
+  plantRsi: Objects/Specific/Hydroponics/duracotton.rsi
+  packetPrototype: DuracottonSeeds
+  productPrototypes:
+    - MaterialDurathread1
+  lifespan: 25
+  maturation: 8
+  production: 3
+  yield: 3
+  potency: 5
+  idealLight: 8
+  growthStages: 3
+  waterConsumption: 1
   chemicals:
     Fiber:
       Min: 5
