--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
@@ -264,6 +264,16 @@
 
 - type: entity
   parent: SeedBase
+  name: packet of glassegg-plant seeds
+  id: GlassEggySeeds
+  components:
+    - type: Seed
+      seedId: glasseggy
+    - type: Sprite
+      sprite: Objects/Specific/Hydroponics/glasseggy.rsi
+
+- type: entity
+  parent: SeedBase
   name: packet of egg-plant seeds
   id: EggySeeds
   components:
